# libscod

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  Makefile  README.org
.cmake/: Findlibscod.cmake
.github/workflows/: build.yml  nightly.yml
etc/: CMakeLists.txt  script.sh
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  main.cpp  main.h  passes.cpp
src/: CMakeLists.txt  Exception.cpp  Exception.h  GrammarLexer.l  GrammarParser.y  GrammarToken.hpp  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Namespace.cpp  Namespace.h  Scod.h  Specification.cpp  Specification.h  Version.in  Version.in.h  libscod.h
src/ast/: Binding.cpp  Binding.h  Definition.cpp  Definition.h  Expression.cpp  Expression.h  Identifier.cpp  Identifier.h  Literal.cpp  Literal.h  Node.cpp  Node.h  Option.cpp  Option.h  Root.cpp  Root.h  Statement.cpp  Statement.h  Type.cpp  Type.h  Visitor.cpp  Visitor.h
src/cst/: Attribute.cpp  Attribute.h  Binding.cpp  Binding.h  Definition.cpp  Definition.h  Expression.cpp  Expression.h  Identifier.cpp  Identifier.h  Literal.cpp  Literal.h  Node.cpp  Node.h  Option.cpp  Option.h  Root.cpp  Root.h  Span.cpp  Span.h  Statement.cpp  Statement.h  Token.cpp  Token.h  Type.cpp  Type.h  Visitor.cpp  Visitor.h
src/transform/: AstDumpPass.cpp  AstDumpPass.h  AstToCasmPass.cpp  AstToCasmPass.h  CstDumpPass.cpp  CstDumpPass.h  CstEmitPass.cpp  CstEmitPass.h  CstToAstPass.cpp  CstToAstPass.h  SourceToCstPass.cpp  SourceToCstPass.h
src/various/: Grammar.org  GrammarLexer.cpp  GrammarParser.cpp  GrammarParser.dot  GrammarParser.output  GrammarParser.tab.h  GrammarParser.xml  GrammarToken.h
